--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <h1>VIBeID: A Structural Vibration-based Soft Biometric Dataset and Benchmark for Person Identification</h1>
         <h3>Under Review</h3>
         <div class="authors">
@@ -74,7 +74,7 @@
                 </div>
                 <div class="author-uni">IIT, Delhi</div>
             </div>
-        </div>
+        </div> -->
         <div class="links">
             <div class="link">
                 <a href="#home" target="_blank" rel="noopener noreferrer">
@@ -88,14 +88,14 @@
                 <div class="link-text">Dataset OSF</div>
                 </a>
             </div>
-             <div class="link">
+             <!-- <div class="link">
                 <a href="https://csciitd-my.sharepoint.com/:f:/g/personal/eez218527_iitd_ac_in/Eio2kmjTholNh2uxhV5RZZABD2cOOgfy5jIiPZIb50fEtw?e=MEBfxp">
                 <img src="./images/database-solid.svg" alt="Dataset in onedrive" width="30" height="30" />
                 <div class="link-text">Dataset Onedrive</div>
                 </a>
-            </div>
+            </div> -->
             <div class="link">
-                <a href="https://github.com/VIBeID/VIBEID" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/vibeidiclr/vibeidiclr.github.io" target="_blank" rel="noopener noreferrer">
                 <img src="./images/github.svg" alt="Code" width="30" height="30" />
                 <div class="link-text">Code</div>
                 </a>
@@ -107,7 +107,7 @@
                 </a>
             </div> -->
         </div>
-        *If the OSF is down, directly download from Onedrive
+        <!-- *If the OSF is down, directly download from Onedrive -->
         <div class="section" id="abstract">
             <h2 class="section-title">Abstract</h2>
             <p class="abstract-text">
@@ -299,12 +299,11 @@
             <h4>VIBeID A1 Details</h4>
             <p class="abstract-text">
                 The VIBeID A1 dataset comprises recordings from 100 participants, each of whom walked for 20 minutes. The data was captured using geophones on  wooden floor. Each person completed four sets of 5-minute walks.
-                he Figure belows shows the data collection on wooden floor for VIBeID A3.1 of Person 14.
-                <div class="img-container">
+                <!-- <div class="img-container">
                     <div class="image-wrapper-1">
                         <img src="./images/wooden_gif_2.gif" alt="VIBeID A1 data collection location" />
                     </div>
-                </div>
+                </div> -->
             </p>
             <p class="abstract-text"> 
                 VIBeID  A1 dataset file contains
@@ -412,25 +411,13 @@
             </p>
             <h3>Maintenance</h3>
             <p class="abstract-text">
-                Mainak Chakraborty and Chandan are maintaining the dataset.Mainak Chakraborty can be contacted at <a href = "mailto: Mainak.Chakraborty@iddc.iitd.ac.in">Mainak.Chakraborty@iddc.iitd.ac.in</a>, 
-                and Chandan can be contacted at <a href = "mailto: chandan@ee.iitd.ac.in">chandan@ee.iitd.ac.in</a>.
+                Vibeid team is maintaining the dataset. We can be contacted at <a href = "mailto: vibeidiclr@gmail.com">vibeidiclr@gmail.com</a>.
             </p>
             <p class="abstract-text">   
                 Please contact us if you notice any errors or have any suggestion with the dataset. To the extent that we notice errors, they will be fixed 
                 and the dataset will be updated. Previous versions of the dataset will be maintained below and errors and previous versions will be posted below.
             </p>
         </div>
-        <!--
-        <div class="section" id="bibtex">
-            <h2 class="section-title">BibTex</h2>
-            <pre id="citation">@inproceedings{chakraborty2024vibeid,
-    title={VIBeID: A Structural Vibration-based Soft Biometric Dataset and Benchmark for Person Identification},
-    author={Mainak Chakraborty, Chandan, Sahil Anchal ,Bodhibrata Mukhopadhyay, and Subrat Kar},
-    booktitle={Advances in Neural Informaion Processing Systems},
-    year={2024}
-}</pre>
-        </div> -->
-
     </div>
         <hr>
         <div id="footer">
