--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
             </div>
         </div>
     </div>
-    <!-- <div class="container">
+ <div class="container">
         <h1>VIBeID: A Structural Vibration-based Soft Biometric Dataset and Benchmark for Person Identification</h1>
         <h3>Under Review</h3>
-        <div class="authors">
+
+        <!-- <div class="authors">
             <div class="author">
                 <div class="author-name">
                     <a href="https://mainakchakraborty.com/">Mainak Chakraborty</a>
@@ -60,6 +61,7 @@
             </div>
             
         </div>
+
         <div class="authors">
             
             <div class="author">
@@ -73,7 +75,7 @@
                     <a href="https://web.iitd.ac.in/~subrat/">Subrat Kar</a>
                 </div>
                 <div class="author-uni">IIT, Delhi</div>
-            </div>
+            </div> -->
         </div> -->
         <div class="links">
             <div class="link">
