--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="container">
-        <h1>VIBeID: A Structural Vibration-based Soft Biometric Dataset and Benchmark for Person Identification</h1>
+        <h1>VIBeID:  STRUCTURAL VIBRATION-BASED SOFT BIOMETRIC DATASET FOR HUMAN GAIT RECOGNITION</h1>
         <h3>Under Review</h3>
         <div class="links">
             <div class="link">
@@ -65,11 +65,15 @@
         <div class="section" id="abstract">
             <h2 class="section-title">Abstract</h2>
             <p class="abstract-text">
-                We present VIBeID, a dataset and benchmark designed for advancing non-invasive person identification through structural vibration. Structural vibrations, produced by the rhythmic impact of the toe and heel on the ground, are distinct and can be used as a privacy-preserving and non-cooperative soft-biometric modality. 
-                We curated the largest dataset VIBeID consists of footfall generated structural vibrations of 100 subjects. Existing datasets in this field typically include around ten subjects and lack comprehensive exploration of domain adaptation. To thoroughly explore the domain adaptation aspect of this biometric approach, we recorded vibration data on three distinct floor types (wooden, carpet, and cement) and at three distances from the geophone sensor (1.5 m, 2.5 m, and 4.0 m), involving 40 and 30 subjects, respectively. Additionally, we benchmarked our dataset against video recordings from 15 individuals in an outdoor setting. 
-                Beyond providing 88.66 hours of raw vibration data, VIBeID establishes a comprehensive benchmark for a) person identification: where the aim is to recognize individuals through their unique structural vibrations, b) domain adaptation: assessing model performance across different walking surfaces and sensor positions, and c) multi-modal comparison: comparing vibration-based and vision-based identification methods. 
-                Our experiments, using both machine learning and deep learning approaches, establish a baseline for future research in this field.
-
+We present VIBeID, a dataset and benchmark designed for advancing non-invasive human gait recognition using structural vibration. Structural vibrations, produced
+by the rhythmic impact of the toe and heel on the ground, are distinct and can be used as a privacy-preserving and non-cooperative soft-biometric modality. We curated the largest dataset VIBeID consists of footfall 
+generated structural vibrations of 100 subjects. Existing datasets in this field typically include around ten subjects and lack comprehensive exploration of domain adaptation. To thoroughly explore the domain adaptation 
+aspect of this biometric approach, we recorded vibration data on three distinct floor types (wooden, carpet, and cement) and at three distances from the geophone sensor (1.5 m, 2.5 m, and 4.0 m), involving 40
+and 30 subjects, respectively. Additionally, we benchmarked our dataset against video recordings from 15 individuals in an outdoor setting. Beyond providing 88 hours of raw vibration data, VIBeID establishes a 
+comprehensive benchmark for a) person identification: where the aim is to recognize individuals through their unique structural vibrations, b) domain adaptation: assessing model performance
+across different walking surfaces and sensor positions, and c) multi-modal comparison: comparing vibration-based and vision-based identification methods. Our
+experiments, using both machine learning and deep learning approaches, establish a baseline for future research in this field, and introduce a large-scale dataset for
+the broader machine learning community.
             </p>
         </div>
            <div class="section" id="dataset">
@@ -78,64 +82,10 @@
                 The dataset is hosted on OSF:
                 <a href="https://osf.io/4fvnj/" target="_blank" rel="noopener noreferrer">Dataset OSF</a>
             </p>
-                <p class="abstract-text"></p>
-                <div class="section" id="datasets">
-                  <h2 class="section-title">Pre-Processed Dataset Links</h2>
-                  <div class="datasets-image-container" style="display: flex; flex-wrap: wrap; gap: 20px;">
-                    <div class="image-wrapper" style="text-align: center; flex: 1;">
-                      <h3>VIBeID A1</h3>
-                      <img src="./images/100_people.png" alt="VIBeID A1" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links">
-                        <a href="https://www.kaggle.com/code/mainakml/vibeida1"><i class="fas fa-code"></i> VIBeID A1 Code</a>
-                        <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a1">
-                          <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="image-wrapper" style="text-align: center; flex: 1;">
-                      <h3>VIBeID A2</h3>
-                      <img src="./images/three_distances.png" alt="VIBeID A2" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links">
-                        <a href="https://www.kaggle.com/code/mainakml/vibeida2"><i class="fas fa-code"></i> VIBeID A2 Code</a>
-                        <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a2">
-                          <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="image-wrapper" style="text-align: center; flex: 1;">
-                      <h3>VIBeID A3</h3>
-                      <img src="./images/three_floor.png" alt="VIBeID A3" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links">
-                        <a href="https://www.kaggle.com/code/mainakml/vibeida3"><i class="fas fa-code"></i> VIBeID A3 Code</a>
-                        <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a3">
-                          <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="image-wrapper" style="text-align: center; flex: 1;">
-                      <h3>VIBeID A4.1</h3>
-                      <img src="./images/a4.png" alt="VIBeID A4.1" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links">
-                        <a href="https://www.kaggle.com/code/mainakml/vibeida41"><i class="fas fa-code"></i> VIBeID A4.1 Code</a>
-                        <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a-4-1">
-                          <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
-                        </a>
-                      </div>
-                    </div>
-                    <div class="image-wrapper" style="text-align: center; flex: 1;">
-                      <h3>VIBeID A4.2</h3>
-                      <img src="./images/a4.2.png" alt="VIBeID A4.2" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links">
-                        <a href="https://www.kaggle.com/code/mainakml/vibeida4ab"><i class="fas fa-code"></i> VIBeID A4.2 Code</a>
-                        <a href="https://www.kaggle.com/datasets/mainakml/geitttt/data">
-                          <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
-                        </a>
-                      </div>
-                    </div>
-                  </div>
+
                 </div>
-                The pre-preprocessed signal dataset is available on kaggle: <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a1-event"><i class="fas fa-database"></i>A1 Signal Data, <a href="https://www.kaggle.com/datasets/mainakml/vibeid-a2-event"><i class="fas fa-database"></i>A2 Signal Data</a><a href="https://www.kaggle.com/datasets/mainakml/vibeid-a3-event"><i class="fas fa-database"></i>A3 Signal Data</a>, and <a href="https://www.kaggle.com/datasets/mainakml/a4-1signal"><i class="fas fa-database"></i>A4.1 Signal Data</a> 
-            <p class="abstract-text">
+                            
+               <p class="abstract-text">
                 The compressed archives include raw recordings of vibration and visual data for all the subdatasets used in our experiments.
                 Subdatasets are sorted by their use cases.
                 <ul>
