--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ the broader machine learning community.
                     <div class="image-wrapper" style="text-align: center; flex: 1;">
                       <h3>VIBeID A1</h3>
                       <img src="./images/100_people.png" alt="VIBeID A1" style="width: 150px; height: 150px;" />
-                      <div class="dataset-links
+                      <div class="dataset-links">
                         <a href="https://www.kaggle.com/datasets/vibeidiclr/vibeid-a1">
                           <img src="https://www.kaggle.com/static/images/open-in-kaggle.svg" alt="Kaggle" style="width: 120px; height: auto;" />
                         </a>
